Implement Generic Algorithm